// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemsCountWarning expect to render compact without error 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="ins-u-warning"
    fill="currentColor"
    height="1em"
    role="img"
    style="vertical-align: -0.125em;"
    viewBox="0 0 576 512"
    width="1em"
  >
    <path
      d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    />
  </svg>
  <span
    class="ins-c-warning-text"
    data-ouia-component-id="OUIA-Generated-Text-2"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
     No Systems
  </span>
</DocumentFragment>
`;

exports[`SystemsCountWarning expect to render count without error 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="ins-u-warning"
    fill="currentColor"
    height="1em"
    role="img"
    style="vertical-align: -0.125em;"
    viewBox="0 0 576 512"
    width="1em"
  >
    <path
      d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    />
  </svg>
  <span
    class="ins-c-warning-text"
    data-ouia-component-id="OUIA-Generated-Text-3"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
     0
  </span>
</DocumentFragment>
`;

exports[`SystemsCountWarning expect to render full without error 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="ins-u-warning"
    fill="currentColor"
    height="1em"
    role="img"
    style="vertical-align: -0.125em;"
    viewBox="0 0 576 512"
    width="1em"
  >
    <path
      d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    />
  </svg>
  <span
    class="ins-c-warning-text"
    data-ouia-component-id="OUIA-Generated-Text-4"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
     Policies without systems will not have reports.
  </span>
</DocumentFragment>
`;

exports[`SystemsCountWarning expect to render without error 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="ins-u-warning"
    fill="currentColor"
    height="1em"
    role="img"
    style="vertical-align: -0.125em;"
    viewBox="0 0 576 512"
    width="1em"
  >
    <path
      d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    />
  </svg>
  <span
    class="ins-c-warning-text"
    data-ouia-component-id="OUIA-Generated-Text-1"
    data-ouia-component-type="PF4/Text"
    data-ouia-safe="true"
    data-pf-content="true"
  >
     No Systems
  </span>
</DocumentFragment>
`;
